--- a/about.html
+++ b/about.html
@@ -342,13 +342,6 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-chou.png">
-                                    <h6 class="p-3">
-                                        Fang-Chieh Chou <br>
-                                        <small class="text-muted">PhD Candidate, UC Berkeley</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
                                         Alan Lorento Cornídez <br>
@@ -356,16 +349,16 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-dehmoubed.jpeg">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
-                                        Ryan Dehmoubed <br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                        Ryan Delorenzo <br>
+                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
-                                        Ryan Delorenzo <br>
+                                        Chris Denaro <br>
                                         <small class="text-muted">Undergraduate Student, Rutgers University</small>
                                     </h6>
                                 </div>
@@ -412,19 +405,19 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-gumm.jpeg">
+                                    <h6 class="p-3">
+                                        Gracie Gumm <br>
+                                        <small class="text-muted">Undergraduate Student, Vanderbilt University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-gunter.jpg">
                                     <h6 class="p-3">
                                         George Gunter <br>
                                         <small class="text-muted">PhD Student, Vanderbilt University</small>
                                     </h6>
                                 </div> 
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
-                                    <h6 class="p-3">
-                                        Philippe Hansen-Estruch <br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
-                                    </h6>
-                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-jang.png">
                                     <h6 class="p-3">
@@ -461,17 +454,10 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
-                                    <h6 class="p-3">
-                                        Malaika Mahmood <br>
-                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-ngo.jpg">
                                     <h6 class="p-3">
                                         Paul Ngo <br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -537,13 +523,6 @@
                                         <small class="text-muted">PhD Student, UC Berkeley</small>
                                     </h6>
                                 </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-zhao.jpg">
-                                    <h6 class="p-3">
-                                        Brent Zhao <br>
-                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
-                                    </h6>
-                                </div> 
                             </div>
                         </div>
                     </div>
@@ -566,6 +545,13 @@
                                         <small class="text-muted">Masters Student, ENS Paris-Saclay</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-zhao.jpg">
+                                    <h6 class="p-3">
+                                        Brent Zhao <br>
+                                        <small class="text-muted">Academic Researcher, UC Berkeley</small>
+                                    </h6>
+                                </div> 
                             </div>
                         </div>
                     </div>
@@ -687,6 +673,20 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-chou.png">
+                                    <h6 class="p-3">
+                                        Fang-Chieh Chou <br>
+                                        <small class="text-muted">PhD Candidate, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-dehmoubed.jpeg">
+                                    <h6 class="p-3">
+                                        Ryan Dehmoubed <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-farid.jpg">
                                     <h6 class="p-3">
                                         Yashar Farid <br>
@@ -701,10 +701,24 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Philippe Hansen-Estruch <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-kardous.jpg">
                                     <h6 class="p-3">
                                         Nicolas Kardous <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
+                                    <h6 class="p-3">
+                                        Malaika Mahmood <br>
+                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -739,6 +753,13 @@
                                     <img class="rounded-circle" src="images/berkeley/headshot-velu.png">
                                     <h6 class="p-3">
                                         Akash Velu  <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div> 
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-wang.png">
+                                    <h6 class="p-3">
+                                        Merrick Wang  <br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
                                     </h6>
                                 </div> 
