--- a/about.html
+++ b/about.html
@@ -405,7 +405,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/vanderbilt/headshot-gumm.jpeg">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-gumm.jpg">
                                     <h6 class="p-3">
                                         Gracie Gumm <br>
                                         <small class="text-muted">Undergraduate Student, Vanderbilt University</small>
