--- a/about.html
+++ b/about.html
@@ -366,7 +366,7 @@
                                     <img class="rounded-circle" src="images/berkeley/headshot-fu.jpeg">
                                     <h6 class="p-3">
                                         Zhe Fu <br>
-                                        <small class="text-muted">PhD Student, UC Berkeley</small>
+                                        <small class="text-muted">PhD Candidate, UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
