--- a/about.html
+++ b/about.html
@@ -234,6 +234,13 @@
                                         <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/temple/headshot-yao.jpg">
+                                    <h6 class="p-3">
+                                        Mengsha Yao <br>
+                                        <small class="text-muted">Postdoctoral Researcher, Temple University</small>
+                                    </h6>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -285,17 +292,17 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/temple/headshot-ramadan.png">
-                                    <h6 class="p-3">
-                                        Rabie Ramadan <br>
-                                        <small class="text-muted">Postdoctoral Researcher, Temple University</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/pennstate/headshot-salehi.jpg">
                                     <h6 class="p-3">
                                         Najmeh Salehi <br>
                                         <small class="text-muted">Postdoctoral Researcher, Pennsylvania State University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/temple/headshot-yao.jpg">
+                                    <h6 class="p-3">
+                                        Mengsha Yao <br>
+                                        <small class="text-muted">Postdoctoral Researcher, Temple University</small>
                                     </h6>
                                 </div>
                             </div>
