--- a/about.html
+++ b/about.html
@@ -321,6 +321,13 @@
                         <div id="Student Researchers" class="tier">
                             <div class="row text-center">
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-alanqary.jpg">
+                                    <h6 class="p-3">
+                                        Arwa AlAnqary <br>
+                                        <small class="text-muted">PhD Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-almatrudi.jpg">
                                     <h6 class="p-3">
                                         Sulaiman Almatrudi <br>
