--- a/about.html
+++ b/about.html
@@ -356,6 +356,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-cheng.png">
+                                    <h6 class="p-3">
+                                        Eric Cheng <br>
+                                        <small class="text-muted">Undergraduate Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
                                         Ryan Delorenzo <br>
