update chris denaro title

--- a/about.html
+++ b/about.html
@@ -373,7 +373,7 @@
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
                                         Chris Denaro <br>
-                                        <small class="text-muted">Undergraduate Student, Rutgers University</small>
+                                        <small class="text-muted">PhD Student, Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
