--- a/about.html
+++ b/about.html
@@ -363,14 +363,14 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/rutgers/headshot-delorenzo.jpg">
                                     <h6 class="p-3">
-                                        Ryan Delorenzo <br>
+                                        Ryan De Lorenzo <br>
                                         <small class="text-muted">Undergraduate Student, Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/rutgers/headshot-denaro.jpg">
                                     <h6 class="p-3">
                                         Chris Denaro <br>
                                         <small class="text-muted">PhD Student, Rutgers University</small>
