change matt title

--- a/about.html
+++ b/about.html
@@ -141,13 +141,6 @@
                                         <small class="text-muted">Principal Investigator & Professor, UC Berkeley</small>
                                     </h6>
                                 </div>
-                                <!-- <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/arizona/headshot-bunting.jpg">
-                                    <h6 class="p-3">
-                                        Matthew Bunting <br>
-                                        <small class="text-muted">Co-Principal Investigator & Postdoctoral Researcher, University of Arizona</small>
-                                    </h6>
-                                </div> -->
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-lee.jpg">
                                     <h6 class="p-3">
@@ -231,7 +224,7 @@
                                     <img class="rounded-circle" src="images/arizona/headshot-bunting.jpg">
                                     <h6 class="p-3">
                                         Matthew Bunting <br>
-                                        <small class="text-muted">Postdoctoral Researcher, University of Arizona</small>
+                                        <small class="text-muted">Postdoctoral Researcher & University Lead, University of Arizona</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
