change Proj Management titles

--- a/about.html
+++ b/about.html
@@ -217,28 +217,28 @@
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-barbour.jpg">
                                     <h6 class="p-3">
                                         William Barbour <br>
-                                        <small class="text-muted">Research Scientist, Vanderbilt University</small>
+                                        <small class="text-muted">Deputy to PI Work, Vanderbilt University</small>
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/arizona/headshot-bunting.jpg">
                                     <h6 class="p-3">
                                         Matthew Bunting <br>
-                                        <small class="text-muted">Postdoctoral Researcher & University Lead, University of Arizona</small>
+                                        <small class="text-muted">University Lead, University of Arizona</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mcquade.jpg">
                                     <h6 class="p-3">
                                         Sean McQuade <br>
-                                        <small class="text-muted">Postdoctoral Researcher, Rutgers University</small>
+                                        <small class="text-muted">Deputy to PI Piccoli, Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/temple/headshot-khoudari.jpg">
                                     <h6 class="p-3">
                                         Nour Khoudari<br>
-                                        <small class="text-muted">PhD Student, Temple University</small>
+                                        <small class="text-muted">Deputy to PI Seibold, Temple University</small>
                                     </h6>
                                 </div>
                             </div>
