move some folks to former

--- a/about.html
+++ b/about.html
@@ -433,13 +433,6 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/arizona/headshot-lee.jpg">
-                                    <h6 class="p-3">
-                                        Gustavo Lee <br>
-                                        <small class="text-muted">PhD Student, University of Arizona</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/rutgers/headshot-mahmood.jpg">
                                     <h6 class="p-3">
                                         Malaika Mahmood <br>
@@ -651,6 +644,13 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Arminda Estrada <br>
+                                        <small class="text-muted">Undergraduate Student, University of Arizona</small>
+                                    </h6>
+                                </div> 
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-farid.jpg">
                                     <h6 class="p-3">
                                         Yashar Farid <br>
@@ -706,6 +706,20 @@
                                         <small class="text-muted">Engineer, Toyota North America</small>
                                     </h6>
                                 </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/arizona/headshot-lee.jpg">
+                                    <h6 class="p-3">
+                                        Gustavo Lee <br>
+                                        <small class="text-muted">PhD Student, University of Arizona</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/arizona/headshot-lysecky.jpeg">
+                                    <h6 class="p-3">
+                                        Roman Lysecky <br>
+                                        <small class="text-muted">Faculty, University of Arizona</small>
+                                    </h6>
+                                </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/headshot-placeholder.png">
                                     <h6 class="p-3">
