tweak Proj Management titles

--- a/about.html
+++ b/about.html
@@ -217,7 +217,7 @@
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-barbour.jpg">
                                     <h6 class="p-3">
                                         William Barbour <br>
-                                        <small class="text-muted">Deputy to PI Work, Vanderbilt University</small>
+                                        <small class="text-muted">Deputy for Vanderbilt University</small>
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -231,14 +231,14 @@
                                     <img class="rounded-circle" src="images/rutgers/headshot-mcquade.jpg">
                                     <h6 class="p-3">
                                         Sean McQuade <br>
-                                        <small class="text-muted">Deputy to PI Piccoli, Rutgers University</small>
+                                        <small class="text-muted">Deputy for Rutgers University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/temple/headshot-khoudari.jpg">
                                     <h6 class="p-3">
                                         Nour Khoudari<br>
-                                        <small class="text-muted">Deputy to PI Seibold, Temple University</small>
+                                        <small class="text-muted">Deputy for Temple University</small>
                                     </h6>
                                 </div>
                             </div>
