--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="https://flow-project.github.io/" target="_blank">FLOW</a>
-                            <a class="dropdown-item" href="https://github.com/DerekGloudemans/I24-MOTION-examples" target="_blank">I-24 MOTION</a>
+                            <a class="dropdown-item" href="https://www.i24motion.org/" target="_blank">I-24 MOTION</a>
                             <a class="dropdown-item" href="https://jmscslgroup.github.io/strym/" target="_blank">Strym</a>
                             <a class="dropdown-item" href="https://jmscslgroup.github.io/libpanda/" target="_blank">Libpanda</a>
                         </div>
