update i24 motion website

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a class="card-link float-right" href="https://github.com/DerekGloudemans/I24-MOTION-examples" target="_blank">Learn More</a>
+                            <a class="card-link float-right" href="https://www.i24motion.org/" target="_blank">Learn More</a>
                         </div>
                     </div>
                 </div>	
