--- a/about.html
+++ b/about.html
@@ -342,6 +342,13 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-bhaskaran.jpeg">
+                                    <h6 class="p-3">
+                                        Sarah Bhaskaran <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-carpio.jpg">
                                     <h6 class="p-3">
                                         Joy Carpio <br>
