--- a/about.html
+++ b/about.html
@@ -475,6 +475,13 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-volkova.jpg">
+                                    <h6 class="p-3">
+                                        Diana Volkova <br>
+                                        <small class="text-muted">Undergraduate Student, Vanderbilt University</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-wang.jpg">
                                     <h6 class="p-3">
                                         Yanbing Wang <br>
