correct diana position/affiliation

--- a/about.html
+++ b/about.html
@@ -478,7 +478,7 @@
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-volkova.jpg">
                                     <h6 class="p-3">
                                         Diana Volkova <br>
-                                        <small class="text-muted">Undergraduate Student, Vanderbilt University</small>
+                                        <small class="text-muted">Masters Student, Free University of Berlin/Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
