move diana to interns, add alex richardson

--- a/about.html
+++ b/about.html
@@ -475,13 +475,6 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/vanderbilt/headshot-volkova.jpg">
-                                    <h6 class="p-3">
-                                        Diana Volkova <br>
-                                        <small class="text-muted">Masters Student, Free University of Berlin/Vanderbilt University</small>
-                                    </h6>
-                                </div>
-                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-wang.jpg">
                                     <h6 class="p-3">
                                         Yanbing Wang <br>
@@ -522,6 +515,20 @@
                                     <h6 class="p-3">
                                         Nathan Lichtlé <br>
                                         <small class="text-muted">Masters Student, ENS Paris-Saclay</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <h6 class="p-3">
+                                        Alex Richardson <br>
+                                        <small class="text-muted">Undergraduate Student, University of Nebraska Lincoln</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-volkova.jpg">
+                                    <h6 class="p-3">
+                                        Diana Volkova <br>
+                                        <small class="text-muted">Masters Student, Free University of Berlin/Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
