add meng and alex richardson

--- a/about.html
+++ b/about.html
@@ -349,6 +349,20 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-bian.jpg">
+                                    <h6 class="p-3">
+                                        Guanyue Bian <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-cao.jpg">
+                                    <h6 class="p-3">
+                                        Mengmeng Cao <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-carpio.jpg">
                                     <h6 class="p-3">
                                         Joy Carpio <br>
@@ -411,6 +425,13 @@
                                         <small class="text-muted">PhD Student, Vanderbilt University</small>
                                     </h6>
                                 </div> 
+                                <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-han.jpeg">
+                                    <h6 class="p-3">
+                                        Songye Han <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-jang.png">
                                     <h6 class="p-3">
@@ -475,6 +496,13 @@
                                     </h6>
                                 </div> 
                                 <div class="col-md-3 col-xs-6 team-max-width">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-dwang.jpeg">
+                                    <h6 class="p-3">
+                                        Dong Wang <br>
+                                        <small class="text-muted">Masters Student, UC Berkeley</small>
+                                    </h6>
+                                </div>
+                                <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/vanderbilt/headshot-wang.jpg">
                                     <h6 class="p-3">
                                         Yanbing Wang <br>
@@ -507,21 +535,21 @@
                                     <img class="rounded-circle" src="images/berkeley/headshot-alaskar.jpg">
                                     <h6 class="p-3">
                                         Fadwa Alaskar <br>
-                                        <small class="text-muted">Academic Researcher, King Abdulaziz City for Science and Technology</small>
+                                        <small class="text-muted">Academic Researcher, King Abdulaziz City for Science and Technology/UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-lichtle.jpeg">
                                     <h6 class="p-3">
                                         Nathan Lichtlé <br>
-                                        <small class="text-muted">Masters Student, ENS Paris-Saclay</small>
+                                        <small class="text-muted">Masters Student, ENS Paris-Saclay/UC Berkeley</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/headshot-placeholder.png">
+                                    <img class="rounded-circle" src="images/vanderbilt/headshot-richardson.jpeg">
                                     <h6 class="p-3">
                                         Alex Richardson <br>
-                                        <small class="text-muted">Undergraduate Student, University of Nebraska Lincoln</small>
+                                        <small class="text-muted">Undergraduate Student, University of Nebraska Lincoln/Vanderbilt University</small>
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
@@ -826,7 +854,7 @@
                                     </h6>
                                 </div>
                                 <div class="col-md-3 col-xs-6 team-max-width">
-                                    <img class="rounded-circle" src="images/berkeley/headshot-wang.png">
+                                    <img class="rounded-circle" src="images/berkeley/headshot-mwang.png">
                                     <h6 class="p-3">
                                         Merrick Wang  <br>
                                         <small class="text-muted">Undergraduate Student, UC Berkeley</small>
