update mengmeng nickname

--- a/about.html
+++ b/about.html
@@ -358,7 +358,7 @@
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-cao.jpg">
                                     <h6 class="p-3">
-                                        Mengmeng Cao <br>
+                                        Mengmeng "Nicole" Cao <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
