add miranda nickname

--- a/about.html
+++ b/about.html
@@ -351,7 +351,7 @@
                                 <div class="col-md-3 col-xs-6 team-max-width">
                                     <img class="rounded-circle" src="images/berkeley/headshot-bian.jpg">
                                     <h6 class="p-3">
-                                        Guanyue Bian <br>
+                                        Guanyue "Miranda" Bian <br>
                                         <small class="text-muted">Masters Student, UC Berkeley</small>
                                     </h6>
                                 </div>
